<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInFragment">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/CustomEditText"
            android:ems="10"
            android:hint="@string/email"
            android:autofillHints="false"
            android:layout_marginTop="40dp"

            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            style="@style/CustomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/password"

            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/CustomButton"
            android:text="@string/proceed"

            app:layout_constraintEnd_toEndOf="@id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />

        <TextView
            android:id="@+id/navToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            android:layout_marginTop="@dimen/margin_top_large"
            android:text="@string/new_user_sign_up" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>